--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,14 @@
 /* استيراد الخطوط */
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Kufam:ital,wght@0,400..900;1,400..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Kufi+Arabic:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&family=Titan+One&display=swap');
 @import "tailwindcss";
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  
 }
+
+
 
 @theme inline {
   --color-background: var(--background);
@@ -23,8 +26,12 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: 'Rubik', sans-serif; 
+  font-family: 'Cairo', sans-serif;  
   scroll-behavior: smooth;
+}
+
+.bg{
+  background: linear-gradient(to bottom , #1E2330 , #161A27);
 }
 
 .shape1{
@@ -157,4 +164,20 @@ filter: blur(160px);
 transform: matrix(0, -1, -1, 0, 0, 0);
 color: #1c2448;
 
+}
+
+
+
+/* swiper */
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
